fix menu z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -183,7 +183,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 99999;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
   background: transparent;
   transition: background 0.3s ease, transform 0.3s ease, opacity 0.3s ease;
